 * sed1520: Make it work without using an external inverter
 * lis driver: Make the last pixel row work (add lastline option parsing)
 * hd44780/ftdi: Fix error in setting backlight and add backlight for 4bit mode
 + new driver: sdeclcd for Watchguard FireBox appliances (F. Mertz)
 + hd44780: Added 'usb4all' connection type (T. Mohaupt)
 * Fix RPM init script hanging on recent OS (#3488223)

v0.5.5
 + sed1330 driver: Add support for HG25504 (L. Lagendijk)
 * Build system: Fix xosd detection
 * Reset ccmode on screen clear for NoritakeVFD, tyan driver
 * All drivers: Refactor CGmode enum into lcd.h
 * hd44780: New (possible faster) screen update algorithm
 + Add an option to start LCDd with screen rotation disabled (M. Zanetti)
 * Rewrite of the t6963 driver fixing several problems (see commit note).
 * picolcd: Add OffBrightness (S. Crane), more icons and fix bignum
 * lcdproc: Fix a single dot appearing on line 5 of the D screen
 * lcdproc: Make the iface screen more readable on 2x16 displays
 * All drivers: sync functions with prototypes
 * Port remaining drivers to 0.5 API (glk, lcdm001, stv5730)
 * Pyramid: Only send LED state changes, doxygen-ize
 * sed1520: Make it work with 68-family style interface, convert to 0.5 API
 * hd44780/imon: Add charmap for NEC uPD16314 and make it configurable
 * Pyramid: Convert set_char to 8 byte bitmap, add support for bignum
 * Convert set_char of drivers bayrad, lb216, lcterm, mtc_s16209x, wirz-sli
 * CFontzPacket: Fix not using select() even if its available
 * CFontzPacket: Use cellwidth = 5 on CFA-631 and CFA-635 too
 * t6963: Convert font to 8 byte bitmap
 * convert i2500vfd and mdm166a driver to use 8 byte bitmap custom character
 * ula200: convert custom characters to 8 byte bitmap
 * Build system: Fix trying to install svga driver twice
 + imon: Add bignum support (Y. Scheglyuk)
 * hd44780/ethlcd: fix LCDd hang up on network error (exits now) (M. Bialonczyk)